fix card border not always visible

--- a/css/main.css
+++ b/css/main.css
@@ -212,7 +212,7 @@ html {
 .card__inner {
     transition: transform 0s linear;
     background-color: var(--color-card-bg);
-    border: 1px solid #fff;
+    border: thin solid #fff;
     border-radius: 67% 77% 88% 71% / 66% 83% 62% 72%;
     overflow: hidden;
 }
